avance cierre de estilos - falta insensibilidad mayuscula y random

--- a/index.html
+++ b/index.html
@@ -36,8 +36,17 @@
             <div id="info"><p></p></div>
         </div>
 
+        <div id="pokeSpecie" class="col-12 mb-5">
+            <div id="info"><p></p></div>
+        </div>
+
         <div id="pokeExp" class="col-12 mb-5">
             <div id="info"><p></p></div>
+        </div>
+
+        <div id="pokeStats" class="col-12 mb-5">
+            <div id="title"><h2></h2></div>
+            <div id="pokeGraph"></div>
         </div>
 
         <div id="pokeAbility" class="col-12 mb-5">
@@ -47,10 +56,6 @@
                 <div id="lista">
                     <ul></ul>
                 </div>
-        </div>
-        <div id="pokeStats" class="col-12 mb-5">
-            <div id="title"><h2></h2></div>
-            <div id="pokeGraph"></div>
         </div>
         </section>
 
