--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
     <section id="pokeinfo" class="container" >
         <div id="pokename" class="col-12 mb-5"></div>
-        <div id="iconos" class="col-12 mb-5">
+        <div id="iconos" class="row col-12 mb-5">
             <div id="pokeicon1"></div>
                 
             <div id="pokeicon2"></div>
