avance tratando de usar el Math.random

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h4>Encuentra tu Pokémon favorito</h4>
     </header>
     <section id="formulario" class="container">
-            <input type="text" placeholder="Ingresa el ID o nombre de tu Pokémon">
+            <input type="text" id="entradaPoke" placeholder="Ingresa el ID o nombre de tu Pokémon">
             <button id="pokesearch">Buscar</button>
     </section>
     <section id="pokeinfo" class="container" >
@@ -60,7 +60,7 @@
         </section>
 
     <footer>
-        <p>Esta es una aplicación hecha por <a href="https://www.youtube.com/channel/UCu2Xu2M431xRNwOiVazDNLQ">@jrgrbst</a> sin saber nada de Pokemón.</p>
+        <p>Esta es una aplicación hecha por <a href="https://www.youtube.com/channel/UCu2Xu2M431xRNwOiVazDNLQ" target="_blank">@jrgrbst</a> sin saber nada de Pokemón.</p>
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
