actualizando estilos última vez

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         </div>
 
         <div id="pokeStats" class="col-12 mb-5">
-            <div id="title"><h2></h2></div>
+            <div id="title"><h2 id="stats"></h2></div>
             <div id="pokeGraph"></div>
         </div>
 
         <div id="pokeAbility" class="col-12 mb-5">
                 <div id="title">
-                    <h2></h2>
+                    <h2 id="habs"></h2>
                 </div>
                 <div id="lista">
                     <ul></ul>
